--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ archive_font_awesome_icon_css: fa-folder-open
 
 # About Widget
 about_widget_avatar_url: http://tachyons.io/img/avatar_1.jpg
-about_widget_text: "My name is Freegnas and this is my blog.<br>I am a full stack software engineer with a strong back-end focus.<br> I currently live and work in Seoul, hit me up if you are in the region."
+about_widget_text: "My name is Freegians and this is my blog.<br>I am a full stack software engineer with a strong back-end focus.<br> I currently live and work in Seoul, hit me up if you are in the region."
 
 
 # Comments.
